deployment/k8s/krakend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krakend
  namespace: bsk
spec:
  type: NodePort
  selector:
    app: krakend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
